apps/public/ghost-ringtale/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ringtale-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - "${SECONDARY_HOSTNAME}"
      secretName: ghost-ringtale-tls
  rules:
    - host: "${SECONDARY_HOSTNAME}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost-ringtale
                port:
                  number: 2368
